--- a/resources/design/desktop/flat/template/appointmentpro/calendar/list.phtml
+++ b/resources/design/desktop/flat/template/appointmentpro/calendar/list.phtml
@@ -429,7 +429,9 @@ $minDate = date('d-m-Y', strtotime("-7 days"));
 					</select>
 				</div>
 			</div>
-
+			<div class="alert alert-warning" role="alert" bis_skin_checked="1">
+				<?php echo p__("appointmentpro", "Please select a customer to see his/her previous NOTES"); ?>
+			</div>
 			<div class="form-row">
 				<div class="form-group col-md-12">
 					<label for="appointment_note"><?php echo p__("appointmentpro", "Note"); ?></label>
