--- a/resources/design/desktop/flat/template/appointmentpro/history/list.phtml
+++ b/resources/design/desktop/flat/template/appointmentpro/history/list.phtml
@@ -23,8 +23,8 @@ $services = $this->getServices();
 
                                                 <div id="row">
                                                     <div class="col-md-2">
-                                                        <select class="input-flat dt-search color-blue" name="customer_id" id="customer_id" data-dynatable-query="customer_id" data-placeholder="<?php echo p__("appointmentpro", 'Choose Customer'); ?>">
-                                                            <option value=""><?php echo p__("appointmentpro", 'Choose Customer'); ?></option>
+                                                        <select class="input-flat dt-search color-blue" name="customer_id" id="customer_id" data-dynatable-query="customer_id">
+                                                            <option value="all"><?php echo p__("appointmentpro", 'Select Customer'); ?></option>
                                                             <?php foreach ($customers as $key => $value) { ?>
                                                                 <option value="<?php echo $value->getId(); ?>"><?php echo $value->getFirstname() . ' (' . $value->getEmail() . ')'; ?></option>
                                                             <?php } ?>
@@ -32,9 +32,10 @@ $services = $this->getServices();
                                                     </div>
                                                     <!-- services -->
                                                     <div class="col-md-2">
-                                                    <select class="input-flat dt-search color-blue" name="service_id" id="service_id" data-dynatable-query="service_id" data-placeholder="<?php echo p__("appointmentpro", 'Choose Service'); ?>">
-                                                            <option value=""><?php echo p__("appointmentpro", 'Choose Service'); ?></option>
-                                                            <option value="all"><?php echo p__("appointmentpro", 'All Services'); ?></option>
+                                                    <select class="input-flat dt-search color-blue" name="service_id" id="service_id" data-dynatable-query="service_id">
+                                                            <!-- <option value="all"><?php echo p__("appointmentpro", 'Select Service'); ?></option> -->
+
+                                                            <option value="all" selected><?php echo p__("appointmentpro", 'All Services'); ?></option>
                                                             <?php foreach ($services as $key => $value) { ?>
                                                                 <option value="<?php echo $value->getId(); ?>"><?php echo $value->getName(); ?></option>
                                                             <?php } ?>
@@ -69,7 +70,7 @@ $services = $this->getServices();
 
                                                 </div>
                                                 <div class="col-md-12">
-                                                    <table id="dynamic-location" class="table content-white-bkg sb-pager">
+                                                    <table id="dynamic-location" class="table content-white-bkg sb-pager" style="display:none;">
                                                         <thead>
                                                             <tr class="border-grey">
                                                                 <th style="width: 10%"><?php echo  p__("appointmentpro", "ID"); ?></th>
@@ -205,6 +206,13 @@ $services = $this->getServices();
     const $customerSelect = $('#customer_id');
     const $serviceSelect = $('#service_id');
 
+    const defaultCustomerOption = $customerSelect.find('option:first');
+    if (defaultCustomerOption.length) {
+        $customerSelect.val(defaultCustomerOption.val());
+    }
+
+    $serviceSelect.val('all');
+
     tableCustomers.bind('dynatable:preinit', function(e, dynatable) {
         dynatable.utility.textTransform.noStyle = function(text) {
             return text;
@@ -247,7 +255,7 @@ $services = $this->getServices();
         dataset: {
             ajax: true,
             ajaxUrl: '/appointmentpro/history/find-all/type/<?php echo $type; ?>/service_type/services',
-            ajaxOnLoad: false,
+            ajaxOnLoad: true,
             records: [],
             perPageDefault: 25
         },
@@ -259,7 +267,8 @@ $services = $this->getServices();
             recordText: '<?php echo __jss("record") ?>',
             recordTextPlural: '<?php echo __jss("records") ?>',
             textOf: '<?php echo __jss("of") ?>',
-            textTo: '<?php echo __jss("to") ?>'
+            textTo: '<?php echo __jss("to") ?>',
+            queries: $('.dt-search')
         },
         writers: {
             _rowWriter: rowWriter
@@ -267,15 +276,6 @@ $services = $this->getServices();
     });
 
     $(document).ready(function() {
-        const placeholderCustomerOption = $customerSelect.find('option').first().clone();
-        const customerOptions = $customerSelect.find('option').not(':first').sort(function(a, b) {
-            if (a.text.toLowerCase() > b.text.toLowerCase()) return 1;
-            if (a.text.toLowerCase() < b.text.toLowerCase()) return -1;
-            return 0;
-        });
-
-        $customerSelect.empty().append(placeholderCustomerOption).append(customerOptions);
-
         if ($.datepicker.regional['<?php echo Core_Model_Language::getCurrentLanguageDatepicker(); ?>']) {
             $.datepicker.setDefaults($.datepicker.regional['<?php echo Core_Model_Language::getCurrentLanguageDatepicker(); ?>']);
         } else {
@@ -366,9 +366,35 @@ $services = $this->getServices();
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script>
     $(document).ready(function() {
+       // Keep the first "Select Customer" (value="all") at the top, sort the rest
+$customerSelect.each(function () {
+  const select = $(this);
+
+  // Grab the sticky option (first "all", otherwise the first option)
+  const $sticky = select.find('option[value="all"]').first().length
+    ? select.find('option[value="all"]').first()
+    : select.find('option').first();
+
+  // Everything else (to be sorted)
+  const $rest = select.find('option').not($sticky);
+
+  // Sort remaining options by visible text (case-insensitive)
+  const sorted = $rest.get().sort((a, b) =>
+    a.text.localeCompare(b.text, undefined, { sensitivity: 'base' })
+  );
+
+  // Rebuild: sticky first, then sorted rest
+  select.empty().append($sticky).append(sorted);
+});
+
+        const firstCustomerOption = $customerSelect.find('option:first');
+        let defaultCustomerId = '';
+        if (firstCustomerOption.length) {
+            defaultCustomerId = firstCustomerOption.val();
+            $customerSelect.val(defaultCustomerId);
+        }
+
         $customerSelect.select2({
-            placeholder: $customerSelect.data('placeholder'),
-            allowClear: true,
             language: {
                 noResults: function() {
                     return "<?php echo P__("appointmentpro", "No results found") ?>";
@@ -376,9 +402,7 @@ $services = $this->getServices();
             }
         });
 
-        $serviceSelect.select2({
-            placeholder: $serviceSelect.data('placeholder'),
-            allowClear: true,
+        $serviceSelect.val('all').select2({
             language: {
                 noResults: function() {
                     return "<?php echo P__("appointmentpro", "No results found") ?>";
@@ -387,62 +411,30 @@ $services = $this->getServices();
         });
 
         const dynatableInstance = tableCustomers.data('dynatable');
-
-        function removeQuery(dynatable, key) {
-            if (!dynatable || !dynatable.queries) {
-                return;
+        if (dynatableInstance) {
+            if (defaultCustomerId) {
+                dynatableInstance.queries.add('customer_id', defaultCustomerId);
             }
-
-            if (typeof dynatable.queries.remove === 'function') {
-                dynatable.queries.remove(key);
-            } else if (dynatable.queries.queryRecord) {
-                delete dynatable.queries.queryRecord[key];
-            }
+            dynatableInstance.queries.add('service_id', $serviceSelect.val());
+            dynatableInstance.process();
         }
 
-        function clearDynatableData() {
-            tableCustomers.find('tbody').empty();
-
+        // resetFilter
+        $('#resetFilter').click(function() {
             if (!dynatableInstance) {
                 return;
             }
 
-            removeQuery(dynatableInstance, 'customer_id');
-            removeQuery(dynatableInstance, 'service_id');
+            dynatableInstance.queries = {};
 
-            if (dynatableInstance.settings && dynatableInstance.settings.dataset) {
-                dynatableInstance.settings.dataset.records = [];
-                dynatableInstance.settings.dataset.originalRecords = [];
-            }
-
-            if (dynatableInstance.dom && typeof dynatableInstance.dom.update === 'function') {
-                dynatableInstance.dom.update();
-            }
-        }
-
-        function processDynatableFilters() {
-            if (!dynatableInstance) {
-                return;
-            }
-
-            const customerId = $customerSelect.val();
-            const serviceId = $serviceSelect.val();
-
-            removeQuery(dynatableInstance, 'customer_id');
-            removeQuery(dynatableInstance, 'service_id');
-
-            if (customerId && serviceId) {
-                dynatableInstance.queries.add('customer_id', customerId);
-                dynatableInstance.queries.add('service_id', serviceId);
-                dynatableInstance.process();
+            if (defaultCustomerId) {
+                $customerSelect.val(defaultCustomerId).trigger('change');
             } else {
-                clearDynatableData();
+                $customerSelect.trigger('change');
             }
-        }
 
-        clearDynatableData();
-
-        $customerSelect.on('change', processDynatableFilters);
-        $serviceSelect.on('change', processDynatableFilters);
+            $serviceSelect.val('all').trigger('change');
+            dynatableInstance.process();
+        });
     });
 </script>
